[package]
name = "uuidv7"
version = "0.1.0"
edition = "2021"
authors = ["Frank Denis <github@pureftpd.org>"]
description = "UUIDv7 implementation"
license = "MIT"
repository = "https://github.com/jedisct1/rust-uuidv7"
homepage = "https://github.com/jedisct1/rust-uuidv7"
readme = "README.md"
keyworkds = ["uid", "uuid", "v7", "uuidv7"]

[dependencies]
base64 = "*"
getrandom = "0.2.5"
