[package]
name = "uuidv7"
version = "0.1.2"
edition = "2021"
authors = ["Frank Denis <github@pureftpd.org>"]
description = "UUIDv7 implementation"
license = "MIT"
repository = "https://github.com/jedisct1/rust-uuidv7"
homepage = "https://github.com/jedisct1/rust-uuidv7"
readme = "README.md"
keywords = ["uid", "uuid", "v7", "uuidv7"]

[dependencies]
getrandom = "0.2.10"
