[package]
name = "uuidv7"
version = "0.1.2"
edition = "2021"
authors = ["Frank Denis <github@pureftpd.org>"]
description = "UUIDv7 implementation"
license = "MIT"
repository = "https://github.com/jedisct1/rust-uuidv7"
homepage = "https://github.com/jedisct1/rust-uuidv7"
readme = "README.md"
keywords = ["uid", "uuid", "v7", "uuidv7"]

[target.'cfg(all(any(target_arch = "wasm32", target_arch = "wasm64"), target_os = "unknown"))'.dependencies]
getrandom = { version = "0.2", optional = false, features = ["js"] }

[target.'cfg(not(all(any(target_arch = "wasm32", target_arch = "wasm64"), target_os = "unknown")))'.dependencies]
getrandom = { version = "0.2", optional = false }
